After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 726802 - rfbsrc: doesn't send stream start event
rfbsrc: doesn't send stream start event
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.x
Other Linux
: Normal normal
: 1.3.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-03-20 23:24 UTC by blake tregre
Modified: 2014-05-02 12:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch adding stream start event to rfbsrc (953 bytes, patch)
2014-03-20 23:25 UTC, blake tregre
committed Details | Review

Description blake tregre 2014-03-20 23:24:46 UTC
rfbsrc doesn't send a stream start event, so I've taken a stab at it.  I've attached a patch that sends a stream start event with the stream id set as "hostname:port".
Comment 1 blake tregre 2014-03-20 23:25:18 UTC
Created attachment 272528 [details] [review]
patch adding stream start event to rfbsrc
Comment 2 Sebastian Dröge (slomo) 2014-05-02 12:21:35 UTC
commit a73a42b10fc6f1ca940238eb5898df291a5f7701
Author: Blake Tregre <blake.tregre@gmail.com>
Date:   Fri May 2 14:20:58 2014 +0200

    rfbsrc: Send stream-start event in the beginning
    
    https://bugzilla.gnome.org/show_bug.cgi?id=726802