rfbsrc: Send stream-start event in the beginning

https://bugzilla.gnome.org/show_bug.cgi?id=726802